# e2xgrader

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  gradebook.db  install.json  jest.config.js  lerna.json  nbgrader_config.py  package-lock.json  package.json  pyproject.toml  setup.py  setupbase.py  sonar-project.properties  tsconfig.eslint.json  tsconfig.json  tsconfigbase.json
.github/workflows/: black.yml  dispatch.yml  python-package.yml  ruff.yml  sonar-scan.yml  workflow-dispatch.yml
demoCourse/: gradebook.db  nbgrader_config.py
docs/source/: conf.py  index.rst
docs/source/extensions/: apps.rst  autograders.rst  index.rst
docs/source/getting_started/: configuration.rst  index.rst  installation.rst  modes.rst
docs/source/user_docs/: authoring.rst  grade_export.rst  grading.rst  help_extension.rst  index.rst  modes.rst
e2xgrader/: __init__.py  __main__.py  __version__.py  validator.py
e2xgrader/apps/: __init__.py  activatemodeapp.py  api.py  autogradeapp.py  baseapp.py  deactivatemodeapp.py  e2xgraderapp.py  e2xmanager.py  generatefeedbackapp.py  modeswitcher.py  nbgraderapp.py  showmodeapp.py  togglemodeapp.py
e2xgrader/config/: __init__.py
e2xgrader/converters/: __init__.py  converter.py  generateexercise.py
e2xgrader/exchange/: __init__.py  collect.py  exchange.py  fetch_assignment.py  fetch_feedback.py  hash_utils.py  list.py  release_assignment.py  release_feedback.py  submit.py  utils.py
e2xgrader/exporters/: __init__.py  exporter.py  formexporter.py  gradeexporter.py  submissionexporter.py
e2xgrader/exporters/filters/: __init__.py  highlight.py  renderextracell.py
e2xgrader/exporters/templates/: hashcode_cell.html
e2xgrader/extension_config/: __init__.py  base.py  conf.py  e2xclassicserverextensionmanager.py  e2xmanager.py  e2xnotebookextensionmanager.py  e2xserverextensionmanager.py
e2xgrader/extensions/: __init__.py  base.py  manager.py  nbextensions.py  serverextensions.py  utils.py
e2xgrader/graders/: __init__.py  base.py  code.py  form.py  multiplechoice.py  singlechoice.py
e2xgrader/models/: __init__.py  assignmentmodel.py  basemodel.py  exercisemodel.py  presetmodel.py  taskmodel.py  taskpoolmodel.py  templatemodel.py
e2xgrader/nbextensions/create_assignment/: create_assignment.css
e2xgrader/nbextensions/extra_cells/: main.js
e2xgrader/preprocessors/: __init__.py  addautogradinginfo.py  clearhiddentests.py  clearsolutions.py  extractattachments.py  filtercellsbyid.py  filtertests.py  overwritecells.py  permutetasks.py  saveautogrades.py  savecells.py  scramble.py  unpermutetasks.py  unscramble.py  validateextracells.py
e2xgrader/preprocessors/authoring/: __init__.py  addtaskheader.py  copyfiles.py  copynotebooks.py  filltemplate.py  generatetaskids.py  makeexercise.py  preprocessor.py  removeexercise.py
e2xgrader/server_extensions/assignment_list/: __init__.py  handlers.py
e2xgrader/server_extensions/base/: __init__.py  extension.py
e2xgrader/server_extensions/e2xbase/: __init__.py  e2xbase.py
e2xgrader/server_extensions/formgrader/: __init__.py  apihandlers.py  base.py  formgrader.py  handlers.py
e2xgrader/server_extensions/grader/: __init__.py  apihandlers.py  base.py  grader.py  handlers.py
e2xgrader/server_extensions/student/: __init__.py  student.py
e2xgrader/server_extensions/student_exam/: __init__.py  student_exam.py
e2xgrader/server_extensions/teacher/: __init__.py  teacher.py
e2xgrader/server_extensions/validate_assignment/: __init__.py  handlers.py
e2xgrader/tests/: test_validator.py
e2xgrader/tests/apps/: test_activatemodeapp.py  test_baseapp.py  test_deactivatemodeapp.py  test_e2xgraderapp.py  test_e2xmanager.py  test_get_jupyter_config_path.py  test_modeswitcher.py  test_showmodeapp.py  test_togglemodeapp.py
e2xgrader/tests/converters/: test_generateexercise.py
e2xgrader/tests/exchange/: test_exchange_utils.py  test_hash_utils.py  test_submit.py  test_utils.py  utils.py
e2xgrader/tests/extensions/: test_utils.py
e2xgrader/tests/graders/: test_base.py  test_code.py  test_multiplechoice.py  test_singlechoice.py
e2xgrader/tests/models/: test_assignmentmodel.py  test_basemodel.py  test_exercisemodel.py  test_presetmodel.py  test_taskmodel.py  test_taskpoolmodel.py  test_templatemodel.py
e2xgrader/tests/preprocessors/: test_clearhiddentests.py  test_clearsolutions.py  test_extractattachments.py  test_filtercellsbyid.py  test_filtertests.py  test_unscramble.py  test_validateextracells.py
e2xgrader/tests/test_utils/: cells.py  test_utils.py
e2xgrader/tests/utils/: test_extra_cells.py  test_mode.py  test_nbgrader_cells.py  test_notebookvariableextractor.py  test_utils.py
e2xgrader/utils/: __init__.py  extra_cells.py  hashcode.py  mode.py  nbgrader_cells.py  notebookvariableextractor.py  utils.py
etc/jupyter/jupyter_server_config.d/: e2xgrader.json
packages_old/api/: package.json  webpack.config.js
packages_old/api/src/: requests.js  utils.js
packages_old/assignment-view-celltoolbar/: package.json
packages_old/assignment-view-celltoolbar/src/: celltoolbar.js
packages_old/authoring-menubar/: package.json
packages_old/authoring-menubar/src/: api.js  authoring-menubar.css  dialogs.js  template-menubar.js  utils.js
packages_old/cell-extension/: package.json
packages_old/cell-extension/src/: renderers.js
packages_old/create-assignment-celltoolbar/: package.json  webpack.config.js
packages_old/create-assignment-celltoolbar/src/: celltoolbar.js  index.js  validator.js
packages_old/exam-menubar/src/: index.js  submit.js
packages_old/help-tab/src/: index.js
packages_old/menubar/src/: index.js  menubar.js
packages_old/notebook-extensions/: package.json  webpack.config.js
packages_old/notebook-extensions/src/: teacher-extension.js
packages_old/restricted-assignment-notebook/: webpack.config.js
packages_old/restricted-assignment-notebook/src/: index.js  (+1 more)
packages_old/restricted-exam-notebook/: webpack.config.js
packages_old/tree-extensions/: package.json
release/srhb/: Untitled.ipynb
source/srhb/: test_nb.ipynb
(+308 files in other folders)
