[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "e2xgrader"
description = "An addon for nbgrader"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Tim Metzler", email = "tim.metzler@h-brs.de" },
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "e2xcore>=0.0.5",
    "e2xauthoring>=0.2.1",
    "pandas"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/Digiklausur/e2xgrader"
Documentation = "https://e2xgrader.readthedocs.io/en/latest/"
Issues = "https://github.com/Digiklausur/e2xgrader/issues"
Pypi = "https://pypi.org/project/e2xgrader/"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov",
    "hatchling",
    "tbump"
]

[project.scripts]
e2xgrader = "e2xgrader.apps.e2xgraderapp:main"

[tool.hatch.version]
path = "e2xgrader/__version__.py"
validate-bump = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "e2xgrader/static/labextensions/@e2xgrader/labextension/static/style.js",
    "e2xgrader/static/labextensions/@e2xgrader/labextension/package.json",
]
skip-if-exists = [
    "e2xgrader/static/labextension/@e2xgrader/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
source_dir = "packages"
build_dir = "e2xgrader/static/labextensions"

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
source_dir = "packages"
build_dir = "e2xgrader/static/labextensions"

[tool.hatch.build.targets.sdist]
artifacts = [
    "e2xgrader/static/labextension"
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "e2xgrader/static/labextension"
]
include = ["/e2xgrader"]

[tool.hatch.build.targets.wheel.shared-data]
"etc/jupyter/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
"e2xgrader/static/labextensions/@e2xgrader/labextension" = "share/jupyter/labextensions/@e2xgrader/labextension"
"e2xgrader/static/labextensions/@e2xgrader/cell-extension" = "share/jupyter/labextensions/@e2xgrader/cell-extension"
"install.json" = "share/jupyter/labextensions/@e2xgrader/labextension/install.json"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.tbump]
github_url = "https://github.com/Digiklausur/e2xgrader/"

[tool.tbump.version]
current = "0.3.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<dev>-dev\d+)?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# Files with the version present
[[tool.tbump.file]]
src = "e2xgrader/__version__.py"

[[tool.tbump.file]]
src = "docs/source/conf.py"

[[tool.tbump.file]]
src = "lerna.json"

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}'

[[tool.tbump.file]]
src = "packages/*/package.json"
search = '"version": "{current_version}'

[[tool.tbump.file]]
src = "packages/*/package.json"
search = '"@e2xgrader/[\w-]+": "{current_version}'

[tool.ruff]
line-length = 100
exclude = ["nbgrader_config.py"]
ignore-init-module-imports = true
select = ["F", "E", "I"]
